[package]
name = "command-engine"
version = "1.0.0-dev"
authors = ["FssAy"]
edition = "2018"

[lib]
path = "src/command-engine.rs"

[dependencies.tokio]
version = "1.*"
features = [
    "rt-multi-thread",
    "sync",
    # "full",
]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[features]
default = []
full = ["json"]
json = ["serde", "serde_json"]
