[package]
name = "command-engine"
version = "1.0.0-rc.1"
authors = ["FssAy"]
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies.tokio]
version = "1.*"
features = [
    "rt-multi-thread",
    "sync",
]
optional = true

[features]
default = ["engine"]
async = ["tokio"]
engine = []
