[package]
name = "command-engine"
version = "1.0.0-rc.1"
authors = ["FssAy"]
edition = "2018"
description = "Transform string instructions into code execution."
license = "GPL-3.0-only"
repository = "https://github.com/VulcoLibs/command-engine"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies.tokio]
version = "1.*"
features = [
    "rt-multi-thread",
    "sync",
]
optional = true

[features]
default = ["engine"]
async = ["tokio"]
engine = []
